plugins {
	id 'org.springframework.boot' version '2.5.3'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'pmd'
}

group = 'br.edu.ifsp.ifspcodelab'
version = '0.0.1'
sourceCompatibility = '11'

ext {
  pmdVersion = '6.46.0'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

jar {
	enabled = false
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.flywaydb:flyway-core'
	implementation 'javax.mail:mail:1.4.7'
    implementation 'org.awaitility:awaitility:4.1.0'
    implementation 'org.apache.pdfbox:pdfbox:2.0.24'
    compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
	implementation 'com.auth0:java-jwt:3.18.2'
	implementation 'com.cloudinary:cloudinary-core:1.29.0'
	implementation 'com.cloudinary:cloudinary-http44:1.29.0'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
}

test {
	useJUnitPlatform()
}

apply from: "${rootProject.projectDir}/gradle/jacoco.gradle"



pmd {
	toolVersion = pmdVersion
	ruleSets = [] 
	ruleSetConfig = rootProject.resources.text.fromFile('config/pmd/ruleset.xml')
	ignoreFailures = true
	consoleOutput = true
}

